feat(prompt-template): Created a good enough prompt template.

--- a/src/prompt_templates/chat.jinja
+++ b/src/prompt_templates/chat.jinja
@@ -1,44 +1,94 @@
-Answer the question based on the context{% if history %}, and history{% endif %} below.
+{%- if context and history -%}
+Answer the "Local User" Question by providing a single answer based on the context
+for expanding your knowledge and the conversation history to keep track of what has
+been said and simulate having memory. {% endif %}
+{%- if not context and history -%}
+Answer the "Local User" Question by providing a single answer based the conversation
+history to keep track of what has been said and simulate having memory. {% endif %}
+{%- if context and not history -%}
+Answer the "Local User" Question by providing a single answer based on the context
+for expanding your knowledge. {% endif %}
+{%- if not context and not history -%}
+Answer the "Local User" Question by providing a single answer.{% endif %}
 
+In the conversation you are the "local-ai", acting concise and knowledgeable assistant.
+The other main participant in the conversation is "local-user", which is a Technical
+Lead specialized in Python with a JavaScript and front-end background.
 
-You are an assistance for a python technical lead and head of Engineering. You goal is
-to provide concise, clear and accurate answers to your boss. So, answer the question
-based on the format rules{%if context%}, context{% endif %}{% if history%}, history{% endif %} and examples.
+Adhere to the rules of the conversation and use the examples to clarify the rules that you
+don't understand. If the information available is insufficient to answer the question,
+ask for the information you would need or respond with "I don't know".
 
+{# Forcing a tripple line break #}
 
-If the information available is insufficient to answer the question, respond with
-"I don't know". If you need more information to respond please ask for the information
-you need.
+Rules
+-----
 
+    {% if context -%}
+    - Avoid referring directly to the context, it should only be used as a knowledge
+      base. Keeping the knowledge from references as subtle as posible.
+    - Otherwise, if the information of the context will be explicitly referred in the
+      answer, you must provide references in a "References" section.
+    {% endif %}
+    {%- if history -%}
+    - Avoid repeating anything said in the conversation history.
+    {%- endif %}
+    - Text: The format of the text should be Markdown.
+    - Text: Each line should not be bigger than 80 characters.
+    - Syntax: The string `--- [//] # ("role")` indicates the end of a previous message and
+      the beginning of a new message from "role".
+    {%- if rules -%}{% for rule in rules %}
+    - {{rule}}{% endfor %}
+    {%- endif %}
 
-Format Rules
-------------
-- Use a Markdown syntax.
-- Break lines bigger than 88 characters.
-{% if context %}
+{%- if context %}
+{# Forcing a tripple line break #}
+
 
 Context
 -------
-{{context}}
-{% endif %} {% if history %}
 
-Previous Conversation history
------------------------------ {% for message in history %}
---- [//] # ("{{message.role}}")
-{{message.content}}
-{% endfor %} {% endif %}
+{{ context | wordwrap(80, break_long_words=False) | indent(4, true) }}
+{%- endif -%}
+
+{% if examples %}
+{# Forcing a tripple line break #}
+
 
 Examples
--------- {% for example in examples %}
-{{example}}
+--------
+{% for example in examples %}
+{{ example | wordwrap(80, break_long_words=False) | indent(4, true) }}
+{%- endfor -%}
+{%- endif -%}
+
+{% if history %}
+{# Forcing a tripple line break #}
+
+
+Conversation History
+--------------------
+{% for message in history %}
+    --- [//] # ("{{message.role}}")
+
+{{ message.content | wordwrap(80, break_long_words=False) | indent(4, true) }}
+
 {% endfor %}
+{%- endif -%}
 
-Question / Query
-----------------
---- [//] # ("user")
-{{query}}
+{# Forcing a tripple line break #}
+
+Local User Question
+-------------------
+
+    --- [//] # ("local-user")
+
+{{ query | wordwrap(80, break_long_words=False) | indent(4, true) }}
 
 
-Answer (markdown)
-----------------
---- [//] # ("ai")
+{# Forcing a tripple line break #}
+Answer
+------
+
+    --- [//] # ("local-ai")
+{{ '    ' }}
