feat(prompt-template): Retored the chat features, and now using the prompt template.

--- a/src/prompt_templates/chat.jinja
+++ b/src/prompt_templates/chat.jinja
@@ -1,19 +1,19 @@
 {%- if context and history -%}
-Answer the "Local User" Question by providing a single answer based on the context
+Answer the question by providing a single answer based on the context
 for expanding your knowledge and the conversation history to keep track of what has
 been said and simulate having memory. {% endif %}
 {%- if not context and history -%}
-Answer the "Local User" Question by providing a single answer based the conversation
+Answer the question by providing a single answer based the conversation
 history to keep track of what has been said and simulate having memory. {% endif %}
 {%- if context and not history -%}
-Answer the "Local User" Question by providing a single answer based on the context
+Answer the question by providing a single answer based on the context
 for expanding your knowledge. {% endif %}
 {%- if not context and not history -%}
-Answer the "Local User" Question by providing a single answer.{% endif %}
+Answer the question by providing a single answer.{% endif %}
 
 In the conversation you are the "local-ai", acting concise and knowledgeable assistant.
-The other main participant in the conversation is "local-user", which is a Technical
-Lead specialized in Python with a JavaScript and front-end background.
+The other main participant in the conversation is "{{username}}", which is a
+{{ userinfo | wordwrap(88, break_long_words=False) }}.
 
 Adhere to the rules of the conversation and use the examples to clarify the rules that you
 don't understand. If the information available is insufficient to answer the question,
@@ -24,7 +24,7 @@ ask for the information you would need or respond with "I don't know".
 Rules
 -----
 
-    {% if context -%}
+    {%- if context -%}
     - **Context**: Avoid referring directly to the context, it should only be used as a knowledge
       base. Keeping the knowledge from references as subtle as posible.
     - **Context**: Otherwise, if the information of the context will be explicitly referred in the
@@ -84,10 +84,10 @@ Conversation History
 
 {# Forcing a tripple line break #}
 
-Local User Question
--------------------
+Question
+--------
 
-    --- [//] # ("local-user")
+    --- [//] # ("{{username}}")
 
 {{ query | wordwrap(84, break_long_words=False) | indent(4, true) }}
 
@@ -96,5 +96,5 @@ Local User Question
 Answer
 ------
 
-    --- [//] # ("local-ai")
+    --- [//] # ("{{botname}}")
 {{ '    ' }}
