--- a/src/prompt_templates/chat.jinja
+++ b/src/prompt_templates/chat.jinja
@@ -1,101 +1,74 @@
-{%- if context and history -%}
-Answer the question by providing a single answer based on the context
-for expanding your knowledge and the conversation history to keep track of what has
-been said and simulate having memory. {% endif %}
-{%- if not context and history -%}
-Answer the question by providing a single answer based the conversation
-history to keep track of what has been said and simulate having memory. {% endif %}
-{%- if context and not history -%}
-Answer the question by providing a single answer based on the context
-for expanding your knowledge. {% endif %}
-{%- if not context and not history -%}
-Answer the question by providing a single answer.{% endif %}
+{% if context and history %}
+Use the provided context to expand your knowledge and the conversation history to keep
+track of what has been said.
+{% elif context and not history %}
+Use the provided context to expand your knowledge.
+{% elif not context and history %}
+Use the conversation history to keep track of what has been said.
+{% else %}
+Answer the question without any context or conversation history.
+{% endif %}
 
-In the conversation you are the "local-ai", acting concise and knowledgeable assistant.
-The other main participant in the conversation is "{{username}}", which is a
+You are acting as a concise and knowledgeable assistant named "{{botname}}".
+The main participant in the conversation is "{{username}}", a
 {{ userinfo | wordwrap(88, break_long_words=False) }}.
-
-Adhere to the rules of the conversation and use the examples to clarify the rules that you
-don't understand, but make sure that you respect the rules even if the examples provided
-contradict some of them. If the information available is insufficient to answer the question,
-ask for the information you would need or respond with "I don't know".
-
-{# Forcing a tripple line break #}
 
 Rules
 -----
 
-    {%- if context -%}
-    - **Context**: Avoid referring directly to the context, it should only be used as a knowledge
-      base. Keeping the knowledge from references as subtle as posible.
-    - **Context**: Otherwise, if the information of the context will be explicitly referred in the
-      answer, you must provide references in a "References" section.
-    {% endif %}
-    {%- if history -%}
-    - **History**: Avoid repeating anything said in the conversation history.
-    - **History**: Use the history as your main source of memory.
-    {%- endif %}
-    - **Text**: Prefer a Markdown Syntax instead of Rich text to respond and interpret the questions.
-    - **Text**: Do not triple back-ticks ("```") directly to answer without enclosing in any format.
-      Only use them to enclose code examples.
-    - **Syntax**: The string `--- [//] # ("name")` indicates the end of a previous message and
-      the beginning of a new message from "name".
-    {%- if rules -%}{% for rule in rules %}
-    - {{rule}}{% endfor %}
-    {%- endif %}
+{% if context %}
+- Use the context as a knowledge base, but avoid referring to it directly.
+  If explicitly referring to context, provide references in a "References" section.
+{% endif %}
+{% if history %}
+- Use the conversation history as your main source of memory, but avoid repeating
+  anything said in it.
+{% endif %}
+- Use Markdown Syntax for responses and interpret questions in the same format.
+- The string `--- [//] # ("name")` indicates the end of a previous message and the
+  beginning of a new message from "name".
+{% if rules %}
+{% for rule in rules %}
+- {{rule}}
+{% endfor %}
+{% endif %}
 
-{%- if context %}
-{# Forcing a tripple line break #}
-
-
+{% if context %}
 Context
 -------
 
 {{ context | wordwrap(84, break_long_words=False) | indent(4, true) }}
-{%- endif -%}
+{% endif %}
 
 {% if examples %}
-{# Forcing a tripple line break #}
-
-
 Examples
 --------
 {% for example in examples %}
 {{ example | wordwrap(84, break_long_words=False) | indent(4, true) }}
-{%- endfor -%}
-{%- endif -%}
+{% endfor %}
+{% endif %}
 
 {% if history or history_sumarized %}
-{# Forcing a tripple line break #}
-
-
 Conversation History
 --------------------
-{%- if history_sumarized -%}
-
+{% if history_sumarized %}
 {{ history_sumarized | wordwrap(88, break_long_words=False) }}
-
-{%- endif -%}
+{% endif %}
 {% for message in history %}
-    --- [//] # ("{{message.role}}")
+--- [//] # ("{{message.role}}")
 
 {{ message.content | wordwrap(84, break_long_words=False) | indent(4, true) }}
-
 {% endfor %}
-{%- endif -%}
-
-{# Forcing a tripple line break #}
+{% endif %}
 
 Question
 --------
 
-    --- [//] # ("{{username}}")
+--- [//] # ("{{username}}")
 
-{{ query | wordwrap(84, break_long_words=False) | indent(4, true) }}
+{{ query | wordwrap(84, break_long_words=False) }}
 
-
-{# Forcing a tripple line break #}
 Answer
 ------
 
-    --- [//] # ("{{botname}}")
+--- [//] # ("{{botname}}")
