refactor(llm): Move the VLLM initializing to the main class.

--- a/src/prompt_templates/chat.jinja
+++ b/src/prompt_templates/chat.jinja
@@ -13,8 +13,8 @@ You are acting as a concise and knowledgeable assistant named "{{botname}}".
 The main participant in the conversation is "{{username}}", a
 {{ userinfo | wordwrap(88, break_long_words=False) }}.
 
-Rules
------
+Conversation Rules
+------------------
 
 {% if context %}
 - Use the context as a knowledge base, but avoid referring to it directly.
