refactor(database): Using SQLite and SQLAlchemy to handle my own tables, and data.

--- a/src/prompt_templates/chat.jinja
+++ b/src/prompt_templates/chat.jinja
@@ -1,3 +1,9 @@
+The following is a conversation with an "AI Assistant" and a "USER".
+
+You are acting as the concise and knowledgeable AI Assistant named "{{botname}}".
+The main user participant in the conversation is "{{username}}", a
+{{ userinfo | wordwrap(88, break_long_words=False) }}.
+
 {% if context and history %}
 Use the provided context to expand your knowledge and the conversation history to keep
 track of what has been said.
@@ -8,10 +14,6 @@ Use the conversation history to keep track of what has been said.
 {% else %}
 Answer the question without any context or conversation history.
 {% endif %}
-
-You are acting as a concise and knowledgeable assistant named "{{botname}}".
-The main participant in the conversation is "{{username}}", a
-{{ userinfo | wordwrap(88, break_long_words=False) }}.
 
 Conversation Rules
 ------------------
@@ -72,3 +74,4 @@ Answer
 ------
 
 --- [//] # ("{{botname}}")
+
